    * modified option window to separate in and out sensor/display options.

  * ADDED:
    * both normal and MSL pressures have been added to the database.
    * a new pictogram has been added.
    * new icons for battery and signal have been added.
    * a new thread to handle Zigbee2Mqtt and Aqara sensors has been added.


### November 6 2021, Release version 0.7.6 ###

  * MODIFIED:
    * change the log function to rotate log files.

  * FIXED:
    * fixed the update system and the close function which couldn't close the weather station.

  * ADDED:
    * added the version number in the aboutlog window.


### November 6 2021, Release version 0.7.5 ###

  * ADDED:
    * a new icon for fog has been added.

  * FIXED:
    * fixed path for update script.


### November 5 2021, Release version 0.7.4 ###

  * FIXED:
    * path for changelog in compiled version has been fixed.
    * fixed path for numpad and keyboard windows.
    * fixed path for icons in no connexion window.
    * fixed path issues in the place window.
    * fixed path for stylesheet in option window.
    * fixed path for stylesheet in aboutlog window.


### October 3 2021, Release version 0.7.3 ###

  * FIXED:
    * fixed an issue with icons in option and about windows.


### October 3 2021, Release version 0.7.2 ###

  * FIXED:
    * fixed an issue with MF forecast not fully displaying in 1h forecast section.


### October 2 2021, Release version 0.7.1 ###

  * FIXED:
    * the gui path was missing in the connexion window.
    * icons indicating forecast and time series pages were not loaded correctly.
    * name 'time' has been replaced by 't' for a variable to avoid conflict with time module.
    * fixed issues with icons in forecast windows.
    * fixed issue with icons in update and download windows.
    * try to fix an issue with MF forecast.


### September 26 2021, Release version 0.7.0 ###

  * FIXED:
    * an issue was fixed in the sensor reading thread about calibration parameters.